--- a/src/index.html
+++ b/src/index.html
@@ -17,10 +17,60 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/normalize.css">
+    <!-- <link rel="stylesheet" href="css/normalize.css"> -->
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Hic, consectetur.</p>
+    <header class="header">
+        <div class="top-header">
+            <div class="container-fluid container--max-width">
+                <div class="top-header__block">
+                    <div class="logo">
+                        <a class="logo__link" href="index.html"> 
+                            <img class="logo__img" src="img/logo.png" alt="no-image">
+                            <span class="logo__span">Локомотив Вашего бизнеса</span>
+                        </a>
+                    </div>
+                    <div class="search">
+                        <form class="search__form">
+                            <input class="search__input" id="search" name="search" type="search" placeholder="Найти товары">
+                            <input class="search__input-submit" type="submit" value="Поиск">
+                        </form>
+                        <div class="search__text">Например: <a class="search__link" href="#">втулка шасси</a></div>
+                    </div>
+                    <div class="contact">
+                        <p class="contact__text">Позвоните нам</p>
+                        <a class="contact__tell" href="tel:+83435465550">8 3435 46-55-50</a>
+                        <a class="contact__email" href="mailto:465550@mail.ru">465550@mail.ru</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="header__menu">
+            <div class="container--max-width">
+                <div class="header__menu-inner">
+                    <div class="container--max-width-center">
+                        <nav class="menu">
+                            <ul class="menu__list">
+                                <li class="menu__list-item menu__list-item--active">
+                                    <a class="menu__link menu__link--active" href="#">Главная</a>
+                                </li>
+                                <li class="menu__list-item">
+                                    <a class="menu__link" href="#">Каталог продукции</a>
+                                </li>
+                                <li class="menu__list-item">
+                                    <a class="menu__link" href="#">Контакты</a>
+                                </li>
+                            </ul>
+                        </nav>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
 </body>
 </html>
