i will start do mobile menu

--- a/src/index.html
+++ b/src/index.html
@@ -67,6 +67,29 @@
                 </div>
             </div>
         </div>
+        <div class="header__mobile">
+            <div class="container-fluid">
+                <div class="header__mobile-inner">
+                    <div class="mobile-menu">
+                        <div class="mobile-menu__logo">
+                            <a class="mobile-menu__logo-link" href="#">
+                                <img class="mobile-menu__logo-img" src="img/logo-Mobile.png" alt="no-image">
+                            </a>
+                        </div>
+                        <div class="mobile-menu__contact">
+                            <a class="mobile-menu__contact-link" href="#">
+                                <img class="mobile-menu__contact-img" src="img/header-icon.png" alt="mobile-menu">
+                            </a>
+                        </div>
+                        <div class="mobile-menu__btn-spam">
+                            <span class="mobile-menu__btn-spam"></span>
+                            <span class="mobile-menu__btn-spam"></span>
+                            <span class="mobile-menu__btn-spam"></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
     </header>
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
