--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     <!-- <link rel="stylesheet" href="css/normalize.css"> -->
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
+<body class="body">
     <header class="header">
         <div class="top-header">
             <div class="container-fluid container--max-width">
@@ -77,21 +77,45 @@
                             </a>
                         </div>
                         <div class="mobile-menu__contact">
-                            <a class="mobile-menu__contact-link" href="#">
+                            <a class="mobile-menu__contact-link" href="tel:+83435465550">
                                 <img class="mobile-menu__contact-img" src="img/header-icon.png" alt="mobile-menu">
                             </a>
                         </div>
-                        <div class="mobile-menu__btn-spam">
-                            <span class="mobile-menu__btn-spam"></span>
-                            <span class="mobile-menu__btn-spam"></span>
-                            <span class="mobile-menu__btn-spam"></span>
+                        <div class="mobile-menu__btn">
+                            <span class="mobile-menu__btn-span"></span>
+                            <span class="mobile-menu__btn-span"></span>
+                            <span class="mobile-menu__btn-span"></span>
+                        </div>
+                        <div class="mobile-menu__nav">
+                            <ul class="mobile-menu__list">
+                                <li class="mobile-menu__item">
+                                    <a class="mobile-menu__link mobile-menu__link--active" href="index.html">Главная</a>
+                                </li>
+                                <li class="mobile-menu__item">
+                                    <a class="mobile-menu__link" href="index.html">Католог продукции</a>
+                                </li>
+                                <li class="mobile-menu__item">
+                                    <a class="mobile-menu__link" href="index.html">Контакты</a>
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </header>
-
+    <script>
+        let menuBtn = document.querySelector('.mobile-menu__btn');        
+        let menu = document.querySelector('.mobile-menu__nav');
+        let body = document.querySelector('.body');
+        
+        menuBtn.addEventListener('click', function(){
+            menu.classList.toggle('active');
+            menuBtn.classList.toggle('active');
+            body.classList.toggle('active');       
+        })
+       
+    </script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
