--- a/src/index.html
+++ b/src/index.html
@@ -98,12 +98,87 @@
                                     <a class="mobile-menu__link" href="index.html">Контакты</a>
                                 </li>
                             </ul>
+                        </div>                        
+                    </div>                    
+                </div>                
+            </div>
+            <div class="mobile-search">
+                <div class="container--max-width">
+                    <div class="mobile-search-inner">
+                        <div class="search">
+                            <form class="search__form">
+                                <input class="search__input-mobile" id="search" name="search" type="search" placeholder="Найти товары">
+                                <input class="search__input-submit" type="submit" value="Поиск">
+                            </form>                       
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </header>
+
+    <div class="title-info">
+        <div class="container--max-width">
+            <div class="title-info-inner">
+                <div class="container">
+                    <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+                        <ol class="carousel-indicators">
+                            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+                            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+                            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="carousel-item active" >
+                            <img class="carousel-item__image" src="img/header__slider1.png" class="d-block w-30" alt="...">
+                            <div class="carousel-caption carousel-info">
+                                <h6 class="carousel-info__item">Электроооборудование</h6>
+                                <h5 class="carousel-info__title">Выключатель 
+                                    автоматический АЕ-2043</h5>
+                                <p class="carousel-info__item-info">предназначены для защиты электрических цепей
+                                    от токов перегрузки и токов КЗ</p>
+                                <a class="carousel-info__link" href="index.html">Подробнее</a>
+                            </div>
+                            </div>
+                            <div class="carousel-item" >
+                            <img class="carousel-item__image" src="img/header__slider1.png" class="d-block w-10" alt="...">
+                            <div class="carousel-caption carousel-info">
+                                <h6 class="carousel-info__item">Электроооборудование</h6>
+                                <h5 class="carousel-info__title">Выключатель 
+                                    автоматический АЕ-2043</h5>
+                                <p class="carousel-info__item-info">предназначены для защиты электрических цепей 
+                                    от токов перегрузки и токов КЗ</p>
+                                <a class="carousel-info__link" href="index.html">Подробнее</a>
+                            </div>
+                            </div>
+                            <div class="carousel-item" >
+                            <img class="carousel-item__image" src="img/header__slider1.png" class="d-block w-10" alt="...">
+                            <div class="carousel-caption carousel-info">
+                                <h6 class="carousel-info__item">Электроооборудование</h6>
+                                <h5 class="carousel-info__title">Выключатель 
+                                    автоматический АЕ-2043</h5>
+                                <p class="carousel-info__item-info">предназначены для защиты электрических цепей 
+                                    от токов перегрузки и токов КЗ</p>
+                                <a class="carousel-info__link" href="index.html">Подробнее</a>
+                            </div>
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleCaptions" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="carousel-control-next" href="#carouselExampleCaptions" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+                </div>
+            </div> 
+        </div>
+    </div>
+    
+
+
+
     <script>
         let menuBtn = document.querySelector('.mobile-menu__btn');        
         let menu = document.querySelector('.mobile-menu__nav');
