--- a/src/index.html
+++ b/src/index.html
@@ -108,7 +108,7 @@
                         <div class="search">
                             <form class="search__form">
                                 <input class="search__input-mobile" id="search" name="search" type="search" placeholder="Найти товары">
-                                <input class="search__input-submit" type="submit" value="Поиск">
+                                <button class="search__input-submit" type="submit"><img class="search__input-img" src="img/header__button-search.png" alt="no-image"></button>
                             </form>                       
                         </div>
                     </div>
@@ -116,7 +116,6 @@
             </div>
         </div>
     </header>
-
     <div class="title-info">
         <div class="container--max-width">
             <div class="title-info-inner">
@@ -128,7 +127,7 @@
                             <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
                         </ol>
                         <div class="carousel-inner">
-                            <div class="carousel-item active" >
+                            <div class="carousel-item active" data-interval="3500">
                             <img class="carousel-item__image" src="img/header__slider1.png" class="d-block w-30" alt="...">
                             <div class="carousel-caption carousel-info">
                                 <h6 class="carousel-info__item">Электроооборудование</h6>
@@ -139,7 +138,7 @@
                                 <a class="carousel-info__link" href="index.html">Подробнее</a>
                             </div>
                             </div>
-                            <div class="carousel-item" >
+                            <div class="carousel-item" data-interval="3500">
                             <img class="carousel-item__image" src="img/header__slider1.png" class="d-block w-10" alt="...">
                             <div class="carousel-caption carousel-info">
                                 <h6 class="carousel-info__item">Электроооборудование</h6>
@@ -150,7 +149,7 @@
                                 <a class="carousel-info__link" href="index.html">Подробнее</a>
                             </div>
                             </div>
-                            <div class="carousel-item" >
+                            <div class="carousel-item" data-interval="3500">
                             <img class="carousel-item__image" src="img/header__slider1.png" class="d-block w-10" alt="...">
                             <div class="carousel-caption carousel-info">
                                 <h6 class="carousel-info__item">Электроооборудование</h6>
@@ -173,6 +172,49 @@
                     </div>
                 </div>
             </div> 
+        </div>
+    </div>
+    <div class="catalog">
+        <div class="container">
+            <div class="catalog-iner">
+                <div class="catalog-iner__title">Каталог продукции</div>
+                <div class="catalog-iner__products">
+                    <div class="row">
+                        <div class="col-6 col-md-3 catalog-iner__products-item">
+                            <a class="catalog-iner__products-link" href="#">
+                                <div class="catalog-iner__products-title">Подшибники</div>
+                                <div class="catalog-iner__products-image">
+                                    <img class="catalog-iner__products-img" src="img/catalog1.png" alt="no-image">
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-6 col-md-3 catalog-iner__products-item">
+                            <a class="catalog-iner__products-link" href="#">
+                                <div class="catalog-iner__products-title">Подшибники</div>
+                                <div class="catalog-iner__products-image">
+                                    <img class="catalog-iner__products-img" src="img/catalog2.png" alt="no-image">
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-6 col-md-3 catalog-iner__products-item">
+                            <a class="catalog-iner__products-link" href="#">
+                                <div class="catalog-iner__products-title">Подшибники</div>
+                                <div class="catalog-iner__products-image">
+                                    <img class="catalog-iner__products-img" src="img/catalog3.png" alt="no-image">
+                                </div>
+                            </a>
+                        </div>
+                        <div class="col-6 col-md-3 catalog-iner__products-item">
+                            <a class="catalog-iner__products-link" href="#">
+                                <div class="catalog-iner__products-title">Подшибники</div>
+                                <div class="catalog-iner__products-image">
+                                    <img class="catalog-iner__products-img" src="img/catalog4.png" alt="no-image">
+                                </div>
+                            </a>
+                        </div>                        
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
     
