second page it's ready

--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
                                     <a class="menu__link menu__link--active" href="#">Главная</a>
                                 </li>
                                 <li class="menu__list-item">
-                                    <a class="menu__link" href="#">Каталог продукции</a>
+                                    <a class="menu__link" href="catalog.html">Каталог продукции</a>
                                 </li>
                                 <li class="menu__list-item">
                                     <a class="menu__link" href="#">Контакты</a>
@@ -93,7 +93,7 @@
                                     <a class="mobile-menu__link mobile-menu__link--active" href="index.html">Главная</a>
                                 </li>
                                 <li class="mobile-menu__item">
-                                    <a class="mobile-menu__link" href="index.html">Католог продукции</a>
+                                    <a class="mobile-menu__link" href="catalog.html">Католог продукции</a>
                                 </li>
                                 <li class="mobile-menu__item">
                                     <a class="mobile-menu__link" href="index.html">Контакты</a>
@@ -351,7 +351,9 @@
             <div class="footer-inner">
                 <nav class="footer-inner__nav">
                     <div class="footer-inner__logo">
-                        <img class="footer-inner__logo-img" src="img/logo-bottom.png" alt="no-image">
+                        <a href="index.html">
+                            <img class="footer-inner__logo-img" src="img/logo-bottom.png" alt="no-image">
+                        </a>
                     </div>
                     <div class="footer-inner__menu">
                         <ul class="footer-inner__ul">
@@ -359,10 +361,10 @@
                                 <a href="" class="footer-inner__link">Главная</a>
                             </li>
                             <li class="footer-inner__li">
-                                <a href="" class="footer-inner__link">Каталог продукции</a>
+                                <a href="catalog.html" class="footer-inner__link">Каталог продукции</a>
                             </li>
                             <li class="footer-inner__li">
-                                <a href="" class="footer-inner__link">Контакты</a>
+                                <a href="#" class="footer-inner__link">Контакты</a>
                             </li>                            
                         </ul>
                     </div>
