i was make 3 and 4 page

--- a/src/catalog.html
+++ b/src/catalog.html
@@ -60,7 +60,7 @@
                                     <a class="menu__link menu__link--active" href="#">Каталог продукции</a>
                                 </li>
                                 <li class="menu__list-item">
-                                    <a class="menu__link" href="#">Контакты</a>
+                                    <a class="menu__link" href="contacts.html">Контакты</a>
                                 </li>
                             </ul>
                         </nav>
@@ -73,7 +73,7 @@
                 <div class="header__mobile-inner">
                     <div class="mobile-menu">
                         <div class="mobile-menu__logo">
-                            <a class="mobile-menu__logo-link" href="#">
+                            <a class="mobile-menu__logo-link" href="index.html">
                                 <img class="mobile-menu__logo-img" src="img/logo-Mobile.png" alt="no-image">
                             </a>
                         </div>
@@ -96,7 +96,7 @@
                                     <a class="mobile-menu__link mobile-menu__link--active" href="catalog.html">Католог продукции</a>
                                 </li>
                                 <li class="mobile-menu__item">
-                                    <a class="mobile-menu__link" href="index.html">Контакты</a>
+                                    <a class="mobile-menu__link" href="contacts.html">Контакты</a>
                                 </li>
                             </ul>
                         </div>                        
@@ -1106,13 +1106,13 @@
                     <div class="footer-inner__menu">
                         <ul class="footer-inner__ul">
                             <li class="footer-inner__li">
-                                <a href="" class="footer-inner__link">Главная</a>
+                                <a href="index.html" class="footer-inner__link">Главная</a>
                             </li>
                             <li class="footer-inner__li">
-                                <a href="" class="footer-inner__link">Каталог продукции</a>
+                                <a href="#" class="footer-inner__link">Каталог продукции</a>
                             </li>
                             <li class="footer-inner__li">
-                                <a href="" class="footer-inner__link">Контакты</a>
+                                <a href="contacts.html" class="footer-inner__link">Контакты</a>
                             </li>                            
                         </ul>
                     </div>
