--- a/src/index.html
+++ b/src/index.html
@@ -60,7 +60,7 @@
                                     <a class="menu__link" href="catalog.html">Каталог продукции</a>
                                 </li>
                                 <li class="menu__list-item">
-                                    <a class="menu__link" href="#">Контакты</a>
+                                    <a class="menu__link" href="contacts.html">Контакты</a>
                                 </li>
                             </ul>
                         </nav>
@@ -73,7 +73,7 @@
                 <div class="header__mobile-inner">
                     <div class="mobile-menu">
                         <div class="mobile-menu__logo">
-                            <a class="mobile-menu__logo-link" href="#">
+                            <a class="mobile-menu__logo-link" href="index.html">
                                 <img class="mobile-menu__logo-img" src="img/logo-Mobile.png" alt="no-image">
                             </a>
                         </div>
@@ -96,7 +96,7 @@
                                     <a class="mobile-menu__link" href="catalog.html">Католог продукции</a>
                                 </li>
                                 <li class="mobile-menu__item">
-                                    <a class="mobile-menu__link" href="index.html">Контакты</a>
+                                    <a class="mobile-menu__link" href="contacts.html">Контакты</a>
                                 </li>
                             </ul>
                         </div>                        
@@ -134,7 +134,7 @@
                                 <h6 class="carousel-info__item">Электроооборудование</h6>
                                 <h5 class="carousel-info__title">Выключатель автоматический АЕ-2043</h5>
                                 <p class="carousel-info__item-info">предназначены для защиты электрических цепей от токов перегрузки и токов КЗ</p>
-                                <a class="carousel-info__link" href="index.html">Подробнее</a>
+                                <a class="carousel-info__link" href="product1.html">Подробнее</a>
                             </div>
                             </div>
                             <div class="carousel-item" data-interval="3500">
@@ -143,7 +143,7 @@
                                 <h6 class="carousel-info__item">Электроооборудование</h6>
                                 <h5 class="carousel-info__title">Выключатель автоматический АЕ-2043</h5>
                                 <p class="carousel-info__item-info">предназначены для защиты электрических цепей от токов перегрузки и токов КЗ</p>
-                                <a class="carousel-info__link" href="index.html">Подробнее</a>
+                                <a class="carousel-info__link" href="product1.html">Подробнее</a>
                             </div>
                             </div>
                             <div class="carousel-item" data-interval="3500">
@@ -152,7 +152,7 @@
                                 <h6 class="carousel-info__item">Электроооборудование</h6>
                                 <h5 class="carousel-info__title">Выключатель автоматический АЕ-2043</h5>
                                 <p class="carousel-info__item-info">предназначены для защиты электрических цепей от токов перегрузки и токов КЗ</p>
-                                <a class="carousel-info__link" href="index.html">Подробнее</a>
+                                <a class="carousel-info__link" href="product1.html">Подробнее</a>
                             </div>
                             </div>
                         </div>
@@ -358,13 +358,13 @@
                     <div class="footer-inner__menu">
                         <ul class="footer-inner__ul">
                             <li class="footer-inner__li">
-                                <a href="" class="footer-inner__link">Главная</a>
+                                <a href="index.html" class="footer-inner__link">Главная</a>
                             </li>
                             <li class="footer-inner__li">
                                 <a href="catalog.html" class="footer-inner__link">Каталог продукции</a>
                             </li>
                             <li class="footer-inner__li">
-                                <a href="#" class="footer-inner__link">Контакты</a>
+                                <a href="contacts.html" class="footer-inner__link">Контакты</a>
                             </li>                            
                         </ul>
                     </div>
